--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.3.72'
+    ext.java_version = JavaVersion.VERSION_1_8
     repositories {
         jcenter()
         google()
